tests/lean/noncompSection.lean.expected.out
1
noncompSection.lean:35:4-35:5: error: failed to compile definition, compiler IR check failed at 'i'. Error: depends on declaration 'Classical.choose', which has no executable code; consider marking definition as 'noncomputable'
